--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1 id="title">JavaScript Fundamentos</h1>
-    <!-- <p class="text">Este é um texto</p>
+    <p class="text">Este é um texto</p>
     <p class="text">Este é outro</p>
     <p class="text">E mais um</p>
     <p class="text">E o último</p>
-    <button id="btn">Clique em mim!</button> -->
+    <button id="btn">Clique em mim!</button>
     <!-- <script>
       console.log("Olá!");
     </script> -->
